@@ -1,5 +1,6 @@
 package com.gretacvld.climb_jam_api.services;
 
+import com.gretacvld.climb_jam_api.dtos.CragDTO;
 import com.gretacvld.climb_jam_api.dtos.FavoriteCragDTO;
 import com.gretacvld.climb_jam_api.entities.Crag;
 import com.gretacvld.climb_jam_api.entities.FavoriteCrag;
@@ -7,6 +8,7 @@ import com.gretacvld.climb_jam_api.entities.User;
 import com.gretacvld.climb_jam_api.exceptions.CragNotFoundException;
 import com.gretacvld.climb_jam_api.exceptions.FavoriteCragNotFoundException;
 import com.gretacvld.climb_jam_api.helpers.Utils;
+import com.gretacvld.climb_jam_api.mappers.CragMapper;
 import com.gretacvld.climb_jam_api.mappers.FavoriteCragMapper;
 import com.gretacvld.climb_jam_api.repositories.CragRepository;
 import com.gretacvld.climb_jam_api.repositories.FavoriteCragRepository;
@@ -14,57 +16,80 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class FavoriteCragService {
 
     @Autowired
     private FavoriteCragRepository favoriteCragRepository;
+
     @Autowired
     private CragRepository cragRepository;
+
     @Autowired
     private Utils utils;
 
-    public List<FavoriteCragDTO> getMyFavorites() {
+    /**
+     * Récupère les favoris de l'utilisateur connecté
+     */
+    public List<CragDTO> getMyFavorites() {
         User user = utils.getCurrentUser();
+
         return favoriteCragRepository.findByUserId(user.getId())
                 .stream()
-                .map(FavoriteCragMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(fav -> CragMapper.toDTO(fav.getCrag()))
+                .toList();
     }
 
-    public List<FavoriteCragDTO> getAllFavoriteCrags() {
-        return favoriteCragRepository.findAll().stream()
-                .map(FavoriteCragMapper::toDTO)
-                .collect(Collectors.toList());
-    }
+    /**
+     * Ajoute un crag aux favoris de l'utilisateur connecté
+     */
+    public FavoriteCragDTO addFavorite(Long cragId) {
 
-    public Optional<FavoriteCragDTO> getFavoriteCragById(Long id) {
-        return favoriteCragRepository.findById(id).map(FavoriteCragMapper::toDTO);
-    }
-
-    public List<FavoriteCragDTO> getFavoriteCragsByUserId(Long userId) {
-        return favoriteCragRepository.findByUserId(userId).stream()
-                .map(FavoriteCragMapper::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    public FavoriteCragDTO create(FavoriteCragDTO dto) {
         User user = utils.getCurrentUser();
-        Crag crag = cragRepository.findById(dto.getCrag().getId())
-                .orElseThrow(() -> new CragNotFoundException("Site d'escalade introuvable"));
-        FavoriteCrag favorite = FavoriteCragMapper.toEntity(dto);
+
+        Crag crag = cragRepository.findById(cragId)
+                .orElseThrow(() ->
+                        new CragNotFoundException("Site d'escalade introuvable"));
+
+        if (favoriteCragRepository.existsByUserIdAndCragId(user.getId(), cragId)) {
+            throw new IllegalStateException("Ce site est déjà dans vos favoris");
+        }
+
+        FavoriteCrag favorite = new FavoriteCrag();
         favorite.setUser(user);
         favorite.setCrag(crag);
-        return FavoriteCragMapper.toDTO(favoriteCragRepository.save(favorite));
+
+        return FavoriteCragMapper.toDTO(
+                favoriteCragRepository.save(favorite)
+        );
     }
 
-    public void delete(Long id) {
-        if (!favoriteCragRepository.existsById(id)) {
-            throw new FavoriteCragNotFoundException("Favori introuvable avec l'ID " + id);
-        }
-        favoriteCragRepository.deleteById(id);
+    /**
+     * Supprime un crag des favoris de l'utilisateur connecté
+     */
+    public void removeFavorite(Long cragId) {
+
+        User user = utils.getCurrentUser();
+
+        FavoriteCrag favorite = favoriteCragRepository
+                .findByUserIdAndCragId(user.getId(), cragId)
+                .orElseThrow(() ->
+                        new FavoriteCragNotFoundException(
+                                "Favori introuvable pour ce site"
+                        ));
+
+        favoriteCragRepository.delete(favorite);
+    }
+
+    /**
+     * Vérifie si un crag est dans les favoris de l'utilisateur connecté
+     */
+    public boolean isFavorite(Long cragId) {
+
+        User user = utils.getCurrentUser();
+
+        return favoriteCragRepository
+                .existsByUserIdAndCragId(user.getId(), cragId);
     }
 }
